--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                                         <li>Date - <span>2023</span></li>
                                         <li>Client - <span>personal</span></li>
                                         <li>Tools - <span>HTML, SSCC, javascript</span></li>
-                                        <li>web - <span><a href="https://github.com/"
+                                        <li>web - <span><a href="https://github.com/gjain87/portfolio"
                                                     target="_Blank">Github</a></span></li>
                                     </ul>
                                 </div>
