--- a/index.html
+++ b/index.html
@@ -621,7 +621,8 @@
                 <div class="portfolio-item" data-category="spring-application">
                     <div class="portfolio-item-inner outer-shadow">
                         <div class="portfolio-item-img">
-                            <img src="img/thumb/smartcontact.PNG" alt="Smart Contact Manager" data-screenshots="img/large/Spring Application/smartcontact-1.PNG">
+                            <img src="img/thumb/smartcontact.PNG" alt="Smart Contact Manager"
+                                data-screenshots="img/large/Spring Application/smartcontact-1.PNG">
                             <!-- view projet btn -->
                             <span class="view-project">view project</span>
                         </div>
@@ -654,6 +655,54 @@
                                         <li>Tools - <span>MySQL,Java, SpringBoot, Spring Security, HTML, CSS, JS,
                                                 Thymeleaf</span></li>
                                         <li>Web - <span><a href="" target="_blank">Github</a></span></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- portfolio item details end -->
+                    </div>
+                </div>
+                <!-- portfolio item end -->
+
+                <!-- portfolio item start -->
+                <div class="portfolio-item" data-category="spring-application">
+                    <div class="portfolio-item-inner outer-shadow">
+                        <div class="portfolio-item-img">
+                            <img src="img/thumb/paymentgateway.PNG" alt="Payment Gateway"
+                                data-screenshots="img/large/PaymentGateway/PaymentGateway-1.PNG,
+                                img/large/PaymentGateway/PaymentGateway-2.PNG,
+                                img/large/PaymentGateway/PaymentGateway-3.PNG,
+                                img/large/PaymentGateway/PaymentGateway-4.PNG">
+                            <!-- view projet btn -->
+                            <span class="view-project">view project</span>
+                        </div>
+                        <p class="portfolio-item-title">Payment Gateway App</p>
+                        <!-- portfolio item details start -->
+                        <div class="portfolio-item-details">
+                            <div class="row">
+                                <div class="description">
+                                    <h3>Project brief:</h3>
+                                    <p>
+
+                                        This secure payment gateway app, built with Java Spring Boot and Razorpay,
+                                        combines a robust backend with a user-friendly UI powered by AJAX, HTML, JS, and
+                                        CSS. Enjoy seamless transactions, multiple payment options, and a scalable
+                                        solution that adapts to your growing business needs.
+                                    </p>
+
+                                </div>
+                                <div class="info">
+                                    <h3>Project info</h3>
+                                    <ul>
+                                        <li>Date - <span>2023</span></li>
+                                        <li>Client - <span>Personal</span></li>
+                                        <li>Tools - <span>Java, SpringBoot, Ajax, HTML, CSS, JS
+                                            </span></li>
+                                        <li>Web - <span><a href="https://github.com/gjain87/PaymentGateway"
+                                                    target="_blank">Github</a></span></li>
+                                        <li>Web - <span><a href="https://paymentgateway-crxt.onrender.com"
+                                                    target="_blank">Try it out!</a></span></li>
+
                                     </ul>
                                 </div>
                             </div>
